--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Testiranje GitHub Actions CI sustava",
     "license": "MIT",
     "require": {
-        "php" : "7.4"
+        "php" : ">=7.3"
     },
     "require-dev": {
         "phpunit/phpunit" : "^9"
